--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,11 @@
   grid-template-columns: 2fr 1.5fr 1fr 1fr;
   width: 362px;
   margin-top: 10px;
+  overflow: scroll;
+}
+
+#modal-archive {
+  overflow: scroll;
 }
 
 .task-item {
@@ -171,6 +176,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: scroll;
 }
 
 .main-bg {
